--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Para A Minha Miss</title>
     <link rel="stylesheet " type="text/css" 
-    href="./css/style.css"
+    href="style.css">
 </head>
 <body>
     <div class="Love"></div>
