--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <title>Para A Minha Miss</title>
-    <link rel="stylesheet " type="text/css" 
-    href="./css/style.css"
+    <meta charset="UTF-8">
+    <title>Para A Minha Miss</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="Love"></div>
-    <h1>Eu Te Amo</h1>
+    <div class="Love"></div>
+    <h1>Eu Te Amo</h1>
 </body>
-</html> 
+</html>
